style.css
@font-face {
    font-family: 'Biome';
    src: url("images/Biome.ttf");
}

html 
{
    scroll-behavior: smooth;    /*Smooth Scrolling effect*/
    overflow-x: hidden;
}

body
{
    margin: 0;
}

a 
{
    color: inherit;
    text-decoration: none;
}


/* Navigation bar */
#nav-bar
{
    margin-top: 10px;
    padding-top: 10px;
    position: sticky;   /*Navbar sticks on top of the screen*/
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 15%;
    padding-right: 15%;
    background-color: transparent; 
    z-index: 11;
}

.nav-item
{
    font-family: 'Biome';
    font-size: 20px;
    text-decoration: none;
    color: white;
}

/* Extra effect for hovering on navbar options */
.nav-item:hover
{
    color:#00DFDA;
}

/* For visibility */
#vignette
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 50px;
    background: linear-gradient(to bottom, black, transparent);

    z-index: 10;
}

#logo
{
    height: 75px;
}

#logo-container
{
    position:relative;
    margin-top: 20px;
    display: flex;
    justify-content: center;
    z-index: 1;
}

/* Landing page background */
header
{
    min-height: 100vh;
    background-image: url(images/bg.png);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    margin-top: -150px;
    z-index: 1;
}

/* Unhovered resume button */
#resume-button {
    display: inline-block;
    padding: 10px 20px;
    margin: 20px;

    border: solid; 
    border-width: 1px; 
    background-color: transparent; 
    color: #00DFDA;

    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
    cursor: pointer;
}

/* Landing page hero */
#hero h1
{
    font-size: 50px;
}

/* Resume button effect when hovered */
#resume-button:hover {
    transform: scale(1.05);
    background-color: #008080;
    color: white;
    box-shadow: 0 0 5px #00DFDA;
}

#hero 
{
    font-family: 'Biome';
    color: white;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column; 
    position: absolute; 
    top: 0;
    left: 0; 
    right: 0;
    bottom: 0;
}

/* Previous projects container */
#prev-projects
{
    background-color: #0F0F0F;
    min-height: auto;
    height: 100%;
    padding-top: 10px;
    padding-bottom: 25px;

}

/* Project cards container */
#projects
{ 
    display: flex;

    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;

    padding-left: 15%;
    padding-right: 15%;
}

/* Project card */
.project 
{
    width: 300px;
    height: 400px;
    border-radius: 15px;
    margin: 5px;
    padding: 15px;
    align-items: center;
    background-color: rgba(25, 25, 25, 0.75);
    border: 2px black;
    box-shadow: 3px 3px 5px 0 rgb(15, 15, 15)
}

/* Scales project cards when hovered */
.project:hover
{
    transform: scale(1.05);
}


/*Project Information*/
.project img 
{
    width: 100%;
    height: 50%;
    object-fit: cover;
    border-radius: 10px;
}

.title
{
    text-align: center;
    font-family: 'Biome';
}

.project h3
{
    font-family: 'Biome';
    font-size: 28px;
    font-weight: lighter;
    text-decoration: none;
    color: white;
    
    line-height: 0%;
}

.project h4
{
    font-family: 'Biome';
    font-size: 23px;
    font-weight: lighter;
    text-decoration: none;
    color: #969696;

    line-height: 0%;
}

.project p
{
    font-family: 'Biome';
    font-size: 15px;
    font-weight: lighter;
    text-decoration: none;
    color: #969696;
    text-align: justify;
}

.project figcaption
{
    padding: 10px;
}


/* About Div */

#about
{
    display: flex;
    flex-wrap: wrap;
    min-height: 50vh;
    background-color: black;

    position: relative;
}

/* Left container (contains profile image and skills) */
#left-container
{
    width: 60%;
    background-color: #008080;
    clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);

    display: flex;
    flex-direction: column;
    justify-content: center;

    position: relative;
}

/* Autobiography container */
#right-container
{
    width: 30%;
    background-color: black;


    display: flex;
    flex-direction: column;
    justify-content: center;
}

#prof-img
{
    position: absolute;
    bottom:0;
    max-height: clamp(300px,30vw, 600px);
    z-index: 10;
}

/* Duplicated profile image for effect purposes */
#prof-img-stick
{
    position: absolute;
    bottom:0;
    max-height: clamp(300px,30vw, 600px);
    z-index: 10;
}


/* Contains PL icons */
#skills-container
{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    
    padding-right: 30%;
    padding-left: 30%;
    padding-bottom: 5%;

    flex-basis: 33.333333%
}

#skills-container img
{
    height: clamp(70px,7vw, 100px);
    padding: 10px;
}

#right-container p
{
    font-family: "Biome";
    font-size: 20px;
    color: white;

    text-align: justify;
    text-indent: 5%;
    z-index: 10;
}

/* Additional conditioning for when making screen width smaller */
@media screen and (max-width: 900px) 
{
    #left-container
    {
      width: 100%;
      margin-left:0%;
      clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
      padding:5%;
    }
    #right-container
    {
      width: 100%;
      padding: 5%;
    }
    #prof-img
    {
        position: absolute;
        margin-left:-10%
    }
    #prof-img-stick
    {
        height:0px;
        width: 0px;;
    }
}


/* Contact Footer */
#contact
{
    display: flex;
    align-items:center;
    min-height: auto;
    background-color: #0F0F0F;

    padding-right: 10%;
}

#contact-logo
{
    width: 50%;
    display: flex;

    align-items: center;
    padding-left: 10%;
}

#contact-logo img
{
    width:clamp(50px,25%,100px);
    padding-right: 50px;
}

#contact-info
{
    display: flex;
    justify-content: flex-end;
    width: 50%;
    
}

#contact-info p
{
    color: white;
    font-weight: lighter;
    font-size: clamp(9px, 2vw, 15px);
    text-align: right;
}

#contact h1
{
    font-size: clamp(12px, 3vw, 30px);
}

#links img
{
    height:clamp(10px, 3vw, 40px);
    padding-left:5px;
}

